--- a/src/components/Products/style.css
+++ b/src/components/Products/style.css
@@ -220,3 +220,134 @@
     font-size: 21px;
   }
 }
+
+.product-image {
+  position: relative;
+  overflow: hidden;
+}
+
+.product-image img {
+  width: 100%;
+}
+
+.product-image .hover {
+  position: absolute;
+  right: 0px;
+  top: 20px;
+  z-index: 111;
+}
+
+.product-image .hover .social-icon li + li {
+  margin-top: 10px;
+  display: block;
+}
+
+.product-image .hover .social-icon li a {
+  display: block;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+  background-color: #ec3323;
+  border-radius: 50%;
+  color: #fff;
+  font-size: 14px;
+  -webkit-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
+}
+
+.product-image .hover .social-icon li a:hover {
+  background-color: #001238;
+}
+
+.product-image .hover .social-icon li:nth-child(1) {
+  position: absolute;
+  top: 20px;
+  -webkit-transform: translateX(80px);
+  transform: translateX(80px);
+  -webkit-transition: transform 500ms;
+  -webkit-transition: -webkit-transform 500ms;
+  transition: -webkit-transform 500ms;
+  transition: transform 500ms;
+  transition: transform 500ms, -webkit-transform 500ms;
+  -webkit-transition-delay: 100ms;
+  transition-delay: 100ms;
+}
+
+.product-image .hover .social-icon li:nth-child(2) {
+  position: absolute;
+  top: 60px;
+  -webkit-transform: translateX(80px);
+  transform: translateX(80px);
+  -webkit-transition: transform 500ms;
+  -webkit-transition: -webkit-transform 500ms;
+  transition: -webkit-transform 500ms;
+  transition: transform 500ms;
+  transition: transform 500ms, -webkit-transform 500ms;
+  -webkit-transition-delay: 200ms;
+  transition-delay: 200ms;
+}
+
+.product-image .hover .social-icon li:nth-child(3) {
+  position: absolute;
+  top: 110px;
+  -webkit-transform: translateX(80px);
+  transform: translateX(80px);
+  -webkit-transition: transform 500ms;
+  -webkit-transition: -webkit-transform 500ms;
+  transition: -webkit-transform 500ms;
+  transition: transform 500ms;
+  transition: transform 500ms, -webkit-transform 500ms;
+  -webkit-transition-delay: 300ms;
+  transition-delay: 300ms;
+}
+
+.product-image .hover .social-icon li:nth-child(4) {
+  position: absolute;
+  top: 160px;
+  -webkit-transform: translateX(80px);
+  transform: translateX(80px);
+  -webkit-transition: transform 500ms;
+  -webkit-transition: -webkit-transform 500ms;
+  transition: -webkit-transform 500ms;
+  transition: transform 500ms;
+  transition: transform 500ms, -webkit-transform 500ms;
+  -webkit-transition-delay: 400ms;
+  transition-delay: 400ms;
+}
+
+.product-item:hover .product-image .hover .social-icon li:nth-child(1) {
+  -webkit-transform: translateX(-60px);
+  transform: translateX(-60px);
+}
+
+.product-item:hover .product-image .hover .social-icon li:nth-child(2) {
+  -webkit-transform: translateX(-60px);
+  transform: translateX(-60px);
+}
+
+.product-item:hover .product-image .hover .social-icon li:nth-child(3) {
+  -webkit-transform: translateX(-60px);
+  transform: translateX(-60px);
+}
+
+.product-item:hover .product-image .hover .social-icon li:nth-child(4) {
+  -webkit-transform: translateX(-60px);
+  transform: translateX(-60px);
+}
+
+.product-image {
+  position: relative;
+}
+
+.product-image:after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: #000 none repeat scroll 0 0;
+  opacity: 0.1;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=10)";
+}
